# aoc-2022

./: Cargo.toml  LICENSE  README.md  test
.github/workflows/: push.yml
day1/: Cargo.toml  README.md
day1/src/: main.rs
day10/: Cargo.toml  README.md
day10/src/: input.rs  main.rs  problem.rs
day10/src/problem/: domain.rs  parsing.rs
day11/: Cargo.toml  README.md
day11/src/: problem.rs
day11/src/problem/: domain.rs  parsing.rs
day2/: Cargo.toml
day2/src/: README.md  battle.rs  choice.rs  main.rs  parser.rs  rps.rs
day3/: Cargo.toml  README.md
day3/src/: compartment.rs  group.rs  item_type.rs  main.rs  rucksack.rs
day4/: Cargo.toml  README.md
day4/src/: main.rs  pair.rs  section_assignment.rs
day5/: Cargo.toml  README.md
day5/src/: main.rs  problem.rs
day5/src/problem/: iterator_ext.rs  rearrangement.rs  simple.rs  stacks.rs
day6/: Cargo.toml  README.md
day6/src/: allocation_tracker.rs  main.rs  problem.rs
day7/: Cargo.toml  README.md
day7/src/: _small2  main.rs  problem.rs  scratch
day7/src/problem/: domain.rs  parsing.rs
day7/src/problem/domain/: space.rs
day8/: Cargo.toml  README.md
day8/src/: main.rs  problem.rs
day8/src/problem/: grid.rs
day9/: Cargo.toml  README.md
day9/src/: main.rs  problem.rs
day9/src/problem/: domain.rs  parsing.rs  snake.rs  vector.rs
src/: base.rs  day1.rs  day2.rs  main.rs
templates/: main.rs  problem.rs
templates/src/: input.rs  main.rs  problem.rs
templates/src/problem/: domain.rs  parsing.rs
