[workspace]
members = ["day1", "day2", "day3", "day4", "day5", "day6", "day7", "day8", "day9", "day10"]


[workspace.dependencies]
color-eyre = "0.6.2"
itertools = "0.10.5"
arraydeque = "0.4.5"
thiserror = "1.0"
tracking-allocator = { version = "0.4", default-features = false }
nom = "7.1.1"
test-case = "2.2.2"