[package]
name = "day6"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
thiserror = "1.0"
itertools = "0.10.5"
arraydeque = "0.4.5"
tracking-allocator = { version = "0.4", default-features = false }
