[package]
name = "day7"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = { workspace = true }
itertools = { workspace = true }
arraydeque = { workspace = true }
thiserror = { workspace = true }
tracking-allocator = { workspace = true }
nom = { workspace = true }

[dev-dependencies]
test-case = { workspace = true }